--- a/templates/add_skiresort.html
+++ b/templates/add_skiresort.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="card valign-wrapper">
+    <div id="new-skiresort-card" class="card valign-wrapper">
         <div class="card-content grey lighten-4">
             <div id="new_skiresort" class="card-panel grey lighten-5">
                 <span class="card-title">NEW SKI RESORT</span>
@@ -44,7 +44,7 @@
                             <i class="small material-icons prefix">comment</i>
                             <input placeholder="additional info" id="other_info" name="other_info" type="text" class="validate">
                         </div>
-                        <div class="input-field col s12 m12 l6">
+                        <div id="skiresort-select" class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">face</i>
                             <select class="validate icons dropdown-content" id="thumbnail" name="thumbnail" required>
                             <option value="" disabled selected>Thumbnail</option>
