--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div id="signup-main" class="container">
-    <div class="card valign-wrapper">
+    <div id="signup-card" class="card valign-wrapper">
         <div class="card-content grey lighten-4">
             <div id="signup-form" class="card-panel grey lighten-5">
                 <span class="card-title">SIGN UP</span>
