--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -31,7 +31,7 @@
                         <div class="col s12 m5 l5">
                             <div class="row"> 
                                 <div class="col s6 m6 l6">
-                                    <span class="skiresort-title"><p >{{skiresort.location_name}}</p></span>  
+                                    <span class="skiresort-title"><p>{{skiresort.location_name}}</p></span>  
                                     <span><p class="skiresort-description">{{skiresort.description}}</p></span>
                                 </div>
                                 <div class="col s6 m6 l6 thumbnail-div">
@@ -42,10 +42,10 @@
                         <div class="col s6 m3 l3">
                             <div class="row">
                                 <div class="col s12 m12 l12">
-                                    <p>Night skiing:   <strong>{{skiresort.night}}</strong></p>
+                                    <p>Night skiing:&nbsp;&nbsp;&nbsp;<strong>{{skiresort.night}}</strong></p>
                                 </div>
                                 <div class="col s12 m12 l12">
-                                    <p>Glacier:   <strong>{{skiresort.glacier}}</strong></p>
+                                    <p>Glacier:&nbsp;&nbsp;&nbsp;<strong>{{skiresort.glacier}}</strong></p>
                                 </div>
                             </div>
                             <div class="row">
@@ -73,7 +73,7 @@
                         </div>
                         {% if session['user']|lower == skiresort.user|lower %} 
                             {% include 'ski_resorts_buttons.html' %}
-                            {% endif %}
+                        {% endif %}
                     </div> 
                 </div>
             </td>
