--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -3,13 +3,13 @@
 
 <div class="container">
     <div class="row valign center-align">
-        <div class="card col s12 blue lighten-5">
+        <div id="messaging" class="card col s12 blue lighten-5">
             <div class="card-panel blue darken-2">
                 <span class="white-text text-darken-2">
-                    <p class="intro-title">MESSAGING UNDER CONSTRUCTION</p>
-                    <p><i class="white large material-icons prefix">gradient</i></p>
+                    <p id="messaging-title">MESSAGING UNDER CONSTRUCTION</p>
+                    <p><i class="white large material-icons prefix">leak_add</i></p>
                     <p>The messaging functionality will be added shortly.</p>
-                    <p>Apologize for inconvenience.</p>
+                    <p>We apologize for the inconvenience.</p>
                     <a href="#" onclick="history.back()"><i class="fas fa-undo-alt"></i></a>
                 </span>
             </div>
