--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,7 +11,7 @@
                         <li><a href="{{url_for('add_trip')}}">New Trip</a></li>
                         <li><a href="{{url_for('ski_resorts')}}">Ski Resorts</a></li>
                         <li><a href="{{ url_for('add_skiresort') }}">New Ski Resort</a></li>
-                        <li><a id="footer-btn" href="#footer-modal" class="modal-trigger">&copy;</a></li>
+                        <li><a href="#footer-modal" class="footer-btn modal-trigger">&copy;</a></li>
                         <li><a href="{{url_for('sign_out')}}">Sign Out</a></li>
                         
                     </ul>
