--- a/static/css/style.css
+++ b/static/css/style.css
@@ -161,7 +161,8 @@ body{
     margin: 0;
     max-width: 100%;
     font-size: 1.2em;
-    font-weight: 400;
+    font-weight: 4
+    00;
     color: white;
 }
 
