Fixed dates in datepicker for trips searsh and a new-trip

--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -21,12 +21,12 @@
                         </div>
                         <div class="input-field col s12 m6 l6">
                                 <i class="material-icons prefix">today</i>
-                                <input id="from" name="from" type="text" class="datepicker" onselect="setDate()" required>
+                                <input id="from" name="from" type="text" class="datepicker" required>
                                 <label for="icon_prefix">From:</label>
                         </div>
                         <div class="input-field col s12 m6 l6">
                                 <i class="material-icons prefix">today</i>
-                                <input id="to" name="to" type="text" class="datepicker" onselect="setDate()" required>
+                                <input id="to" name="to" type="text" class="datepicker" required>
                                 <label for="icon_prefix">To:</label>
                         </div>
                         <div class="input-field col s12 m6 l6">
