--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -38,7 +38,7 @@
                                 </div>
                                 <div class="input-field col s12 m6 l6 xl6">
                                     <i class="material-icons prefix">location_city</i>
-                                    <input placeholder="you are from" id="from" name="from" type="text" class="validate" required>
+                                    <input placeholder="you are from" id="city" name="city" type="text" class="validate" required>
                                 </div>
                                 <div id="signup-select" class="input-field col s12 m6 l6 xl6">
                                     <i class="material-icons prefix">face</i>
