--- a/templates/trips.html
+++ b/templates/trips.html
@@ -55,7 +55,7 @@
                                                 <div class="col s12 m4 l4 xl4">
                                                     <p>{{user.gender}}</p>
                                                     <p>{{user.ageRange}}</p>
-                                                    <p>{{user.from}}</p>
+                                                    <p>{{user.city}}</p>
                                                 </div>
                                                 <div class="col s12 m4 l4 xl4">
                                                     <p class="text-center"><i class="fas fa-address-card"></i></p>
