--- a/templates/trips.html
+++ b/templates/trips.html
@@ -59,7 +59,7 @@
                                                 </div>
                                                 <div class="col s12 m4 l4 xl4">
                                                     <p class="text-center"><i class="fas fa-address-card"></i></p>
-                                                    <p><a href="{{ url_for('contact_me') }}">Contact Me</a></p>
+                                                    <p><a href="{{ url_for('contact_me') }}" target="_blank">Contact Me</a></p>
                                                 </div> 
                                             </div>                   
                                         </div>
