--- a/templates/404.html
+++ b/templates/404.html
@@ -6,7 +6,7 @@
         <div id="messaging" class="card col s12 blue lighten-5">
             <div class="card-panel blue darken-2">
                 <span class="white-text text-darken-2">
-                    <h4 id="404-title">SORRY! <br> PAGE NOT FOUND</h4>
+                    <h4 id="page-not-found-title">SORRY! <br> PAGE NOT FOUND</h4>
                     <p><i class="white large material-icons prefix">grid_off</i></p>
                     <p>Looks like this page does not exist.</p>
                     <a href="{{ url_for('trips') }}"><h5><strong>Click Here</strong></h5></a>
