--- a/static/css/style.css
+++ b/static/css/style.css
@@ -246,6 +246,7 @@ body{
     margin-bottom: 0;
 }
 
+#new-trip-card .card-content,
 /* to fix oversized text and images in select for avatar and thumbnail */
 #new-skiresort-card .card-content,
 #signup-card .card-content{
@@ -612,9 +613,20 @@ a[data-tool-tip]:hover::after {
         font-size: 1.3em;
     }   
     #search-btn-box{
-        padding-left: 0px;
-        margin-right: 15px;
+        padding-left: 3px;
+        margin-right: 20px;
         padding-right: 0px;
+    }
+    #search-fields .input-field{
+        padding-right: 3px;
+        margin-right: 0px;
+        padding-left: 0px;
+        margin-left: 0px;
+        margin-bottom: 0px;
+        padding-bottom:0px;
+    }
+    #search-btn{
+        font-size: 8px;
     }
     #messaging{
         width: 95%;
