--- a/templates/add_skiresort.html
+++ b/templates/add_skiresort.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div id="new-skiresort-card" class="card valign-wrapper">
         <div class="card-content grey lighten-4">
-            <div id="new_skiresort" class="card-panel grey lighten-5">
+            <div id="new-skiresort" class="card-panel grey lighten-5">
                 <span class="card-title">NEW SKI RESORT</span>
                 <div class="row">
                     <form action="{{ url_for('insert_skiresort')}}" method="POST" class="col s12">
