--- a/templates/trips.html
+++ b/templates/trips.html
@@ -5,7 +5,7 @@
     <h5 id="trip-search-title" class="center">SEARCH UPCOMING TRIPS</h5> 
     <form action="{{ url_for('search_trips') }}" method="post" class="col s12">
         <div class="row valign-wrapper center-align">
-            <div class="col s9 m10">
+            <div id="search-fields" class="col s9 m10">
                 <div class="input-field col s12 m4">
                     <i class="small material-icons prefix">search</i>
                     <input placeholder="ski resort" type="text" name="query" id="query" class="validate">
@@ -19,7 +19,7 @@
                     <input placeholder="date to" type="text" name="query_to" id="query_to" class="validate datepicker">
                 </div>
             </div>
-            <div class="col s3 m2 search-btn-box">
+            <div id="search-btn-box" class="col s3 m2 ">
                 <div class="row">
                     <a href="{{ url_for('trips') }}" class="search-btn red btn text-shadow">&nbsp;Reset&nbsp;</a>
                     <button type="submit" class="search-btn light-blue btn text-shadow">Search</button>
