--- a/templates/index_nav.html
+++ b/templates/index_nav.html
@@ -7,10 +7,9 @@
                 <div id="home-logo">
                     <a href="{{url_for('show_index')}}" id="navbar-logo" class="brand-logo left">Hit the Slopes!</a>
                 </div>
-                
                 <ul class="right">
-                    <li><a href="{{url_for('sign_up_page')}}">SIGN UP</a></li>
-                    <li><a href="{{url_for('sign_in_page')}}">SIGN IN</a></li>
+                    <li><a class="menu-item" href="{{url_for('sign_up_page')}}">SIGN UP</a></li>
+                    <li><a class="menu-item" href="{{url_for('sign_in_page')}}">SIGN IN</a></li>
                 </ul>
             </div>
         </nav>
