--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
                     <ul id="index-list">
                         <li><a class="index-link" href="{{url_for('sign_up_page')}}"><i class="fa fa-user-plus fa-fw"></i>&nbsp;&nbsp;&nbsp;SIGN UP</a></li>
                         <li><a class="index-link" href="{{url_for('sign_in_page')}}"><i class="fa fa-tram fa-fw"></i>&nbsp;&nbsp;&nbsp;POST TRIPS</a></li>
-                        <li><a class="index-link" href="{{url_for('sign_in_page')}}"><i class="fa fa-searchengin fa-fw"></i>&nbsp;&nbsp;&nbsp;SEARCH TRIPS</a></li>
+                        <li><a class="index-link" href="{{url_for('sign_in_page')}}"><i class="fa fa-search fa-fw"></i>&nbsp;&nbsp;&nbsp;SEARCH TRIPS</a></li>
                         <li><a class="index-link" href="{{url_for('sign_in_page')}}"><i class="fas fa-user-friends fa-fw"></i>&nbsp;&nbsp;&nbsp;TEAM UP</a></li>
                         <li><i class="fa fa-skiing fa-fw"></i>&nbsp;&nbsp;&nbsp;HIT THE SLOPES!</li>
                     </ul>
