--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -45,7 +45,7 @@
                                     <p>Night skiing:&nbsp;&nbsp;&nbsp;<strong>{{skiresort.night}}</strong></p>
                                 </div>
                                 <div class="col s12 m12 l12">
-                                    <p>Glacier:&nbsp;&nbsp;&nbsp;<strong>{{skiresort.glacier}}</strong></p>
+                                    <p>Glacier:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>{{skiresort.glacier}}</strong></p>
                                 </div>
                             </div>
                             <div class="row">
@@ -63,7 +63,7 @@
                                     <p>Additional info:</p>
                                 </div>
                                 <div class="col">
-                                    <p><strong>{{skiresort.other_info}}</strong></p>
+                                    <p class="skiresort-info"><strong>{{skiresort.other_info}}</strong></p>
                                 </div>
                             </div>
                         </div>
