--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -9,7 +9,9 @@
                     <p id="messaging-title">MESSAGING UNDER CONSTRUCTION</p>
                     <p><i class="white large material-icons prefix">leak_add</i></p>
                     <p>The messaging functionality will be added shortly.</p>
-                    <p>We apologize for the inconvenience.</p>
+                    <hr>
+                    <p id="message-close">Press the button below to close this window.</p>
+                    <button class="close-button" value="Close this window" type="button" onclick="self.close()"><i class="material-icons">close</i></button>
                 </span>
             </div>
         </div>
