--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,10 +4,10 @@
 * Autoprefixer: v9.7.6
 * Browsers: last 4 version
 */
-
 /*----  General styles ---*/
 @import url('https://fonts.googleapis.com/css?family=Roboto:200,300,400,500,600,700,800,900&display=swap');
 
+/* General styling */
 html, body{
     margin: 0;
     padding: 0;  
@@ -75,6 +75,7 @@ body{
     font-size: 24px;
 }
 
+
 .intro-title,
 #messaging-title{
     font-size: 27px;
@@ -124,7 +125,9 @@ body{
     font-size: 12px;
     margin: 3px 2px 3px 0;
 }
+/* End - Navbar */
 
+/* Buttons */
 .bnts{
     margin-right: 1px;
 }
@@ -155,6 +158,7 @@ body{
     float: left;
 }
 
+/* Flashed messages */ 
 .message-board{
     display: -webkit-box;
     display: -ms-flexbox;
@@ -173,9 +177,9 @@ body{
     font-size: 1.2em;
     font-weight: 400;
     color: white;
-}
+}/* End - Flashed messages */ 
 
-.center {
+.center{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -209,6 +213,7 @@ body{
     margin-bottom: 0px;
 }
 
+/* Search panel */
 #search-trips-panel{
     margin-bottom: 2px;
 }
@@ -227,6 +232,7 @@ body{
     padding-left: 0px;
 }
 
+/* Ski resorts cards */
 .td{
     padding: 0px;
 }
@@ -251,10 +257,6 @@ body{
     margin-bottom: 0px;
     padding-right: 14px;
     padding-left: 14px;
-}
-
-.trip-card{
-    border: #0056B2 solid 1.5px;
 }
 
 .skiresort-title {
@@ -298,7 +300,12 @@ body{
     text-transform: uppercase;
     color: #0056B2;
 }
+/* End - Ski resorts cards */
 
+/* Trips  */
+.trip-card{
+    border: #0056B2 solid 1.5px;
+}
 .trip-cell{
     padding: 5px 0 0 0;
 }
@@ -426,6 +433,7 @@ a[data-tool-tip]:hover::after {
     color:  #336C8F;
 }
 /* End - Modal for users' profiles */
+/* End - Trips  */
 
 /* Footer */
 #footer-img{
@@ -475,6 +483,20 @@ a[data-tool-tip]:hover::after {
 #footer-btn-mobile{
     font-size: 1em;
 }
+/* End - Footer */
+
+/* self-close button for contact_me.html  */
+#message-close{
+    font-size: 0.9em;
+}
+.close-button {    
+    border-radius: 50%;
+}
+.close-button .material-icons{    
+    color: #A4352C;
+}
+
+
 
 @media screen and (max-width: 2000px){
     #main{
@@ -508,23 +530,9 @@ a[data-tool-tip]:hover::after {
     }  
 }
 
-/* self-close button for contact_me.html  */
-#message-close{
-    font-size: 0.9em;
-}
-
-.close-button {    
-    border-radius: 50%;
-}
-
-.close-button .material-icons{    
-    color: #A4352C;
-}
-
-
 @media screen and (max-width: 992px){
     /* minimize mobile sidenav menu  */
-    #mobile-demo {
+    #mobile-demo{
         height: 300px;
         width: 160px;
         padding-bottom: 0;
@@ -544,7 +552,6 @@ a[data-tool-tip]:hover::after {
         width: 180px;
         padding-bottom: 0;
     }  
-
     /*  Logo size smaller */
     #navbar-logo{
         font-size: 2.5em;
@@ -562,7 +569,7 @@ a[data-tool-tip]:hover::after {
 }
 
 /* Hide horizontal line under Avatar and Ski resort in trips on bigger screens */
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 600px){
     .invisible-hr{
         display: none;
     }
@@ -582,7 +589,7 @@ a[data-tool-tip]:hover::after {
 
 @media screen and (max-width: 576px){
     /* minimize mobile sidenav menu  */
-    #mobile-demo {
+    #mobile-demo{
         height: 290px;
         width: 180px;
         padding-bottom: 0;
@@ -668,6 +675,8 @@ a[data-tool-tip]:hover::after {
     }
     /* to make datepciker modal smaller for the smallest devices */
     .datepicker-modal {
+        -webkit-transform: scaleX(0.8) scaleY(0.8) !important;
+        -ms-transform: scaleX(0.8) scaleY(0.8) !important;
         transform: scaleX(0.8) scaleY(0.8) !important;
     }
 }
