--- a/templates/index_nav.html
+++ b/templates/index_nav.html
@@ -4,7 +4,7 @@
     <div class="navbar-fixed">
         <nav id="navbar">
             <div class="nav-wrapper">
-                <div id="home-logo">
+                <div>
                     <a href="{{url_for('show_index')}}" id="navbar-logo" class="brand-logo left">Hit the Slopes!</a>
                 </div>
                 <ul class="right">
