--- a/templates/edit_trip.html
+++ b/templates/edit_trip.html
@@ -21,21 +21,21 @@
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">today</i>
-                            <input value="{{trip.from}}" id="from" name="from" type="text" class="datepicker">
+                            <input value="{{trip.from}}" id="from" name="from" type="text" class="datepicker" required>
                             <label for="icon_prefix">From:</label>
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">today</i>
-                            <input value="{{trip.to}}" id="to" name="to" type="text" class="datepicker">
+                            <input value="{{trip.to}}" id="to" name="to" type="text" class="datepicker" required>
                             <label for="icon_prefix">To:</label>
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">supervisor_account</i>
-                            <input value="{{trip.adults}}" id="adults" name="adults" type="text" class="validate" required>
+                            <input value="{{trip.adults}}" id="adults" name="adults" type="number" class="validate" min="0" required>
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">child_care</i>
-                            <input value="{{trip.kids}}" id="kids" name="kids" type="text" class="validate" required>
+                            <input value="{{trip.kids}}" id="kids" name="kids" type="number" class="validate" min="0" required>
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">ac_unit</i>
