--- a/templates/edit_trip.html
+++ b/templates/edit_trip.html
@@ -13,7 +13,7 @@
                                 <i class="material-icons prefix">terrain</i>
                                 <select id="skiresort" name="skiresort">
                                     <option value="{{trip.location_name}}" disabled selected>{{trip.location_name}}</option>
-                                    {% for skiresort in skiresorts %}
+                                    {% for skiresort in skiresorts|sort(attribute="location_name") %}
                                         <option value="{{skiresort.location_name}}">{{skiresort.location_name}}</option>
                                     {% endfor %}
                                 </select>
